Refactored ZipTopArtistAndTrackByCountryBenchmark